--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -31,6 +31,10 @@
                     <label for="name">What is your name?</label>
                     <input type="text" id="name" class="form-control" placeholder="Your name here...">
                 </div>
+                <div class="form-group">
+                    <label for="message">your message</label>
+                    <input type="text" id="message" class="form-control" placeholder="message...">
+                </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
             </form>
         </div>
