feat : member & security

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -13,6 +13,10 @@
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
+<p>
+<h2>Welcome to OAuth 2.0 + JWT Spring Security</h2>
+<a href="http://localhost:8080/oauth2/authorization/google">Google로 로그인</a>
+</p>
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
